# rag-toy

./: .env.example  .gitignore  .pre-commit-config.yaml  debug_pdf_processing.py  example_ingest.py  hierarchical_demo.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  test_minimal.py  test_single_doc.py
configs/: search_schema.json  search_schema_hierarchical.json
data/eval/: questions.jsonl
scripts/: 00_create_search_index.py  01_fetch_web_data.py  02_bis_parse_pdf.py  02_parse_pdf.py  04_make_chunks.py  04a_make_chunks_web.py  05_upsert_chunks_folder.py  05_upsert_chunks_to_search.py  07_smoke_query.py
src/rag_toy/: main.py
src/rag_toy/api/: deps.py
src/rag_toy/api/routers/: rag.py
src/rag_toy/rag/: __init__.py  adapters.py  interfaces.py  models.py  service.py
src/rag_toy/rag/generation/: answer.py  citations.py
src/rag_toy/rag/ingestion/: orchestrator.py
src/rag_toy/rag/ingestion/chunking/: __init__.py  base.py  heuristics.py  llamaparse_pdf_chunker.py  registry.py
src/rag_toy/rag/ingestion/chunking/langchain/: __init__.py
src/rag_toy/rag/ingestion/chunking/llamaindex/: __init__.py  llamaparse_pdf_chunker.py  pdf_chunker.py
src/rag_toy/rag/ingestion/chunking/native/: __init__.py  pdf_chunker.py  web_chunker.py
src/rag_toy/rag/ingestion/indexing/: mapper.py  models.py  retry.py  service.py
src/rag_toy/rag/ingestion/loaders/: __init__.py  base.py  llamaparse_pdf_loader.py  pdf_book_loader.py  pdf_loader.py  web_loader.py
src/rag_toy/rag/retrieval/: factory.py  hierarchical_retriever.py  hierarchical_utils.py  retrieve.py
tests/: test_backward_compatibility.py
tests/integration/: test_llamaparse_pdf_loader.py  test_pdf_book_loader_simple.py  test_rag_api.py  test_rag_ingestion_comprehensive.py
