[tool.poetry]
name = "rag-toy"
version = "0.1.0"
description = "RAG Toy Project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "*"
numpy = "*"
pillow = "*"
pypdf = "*"
pytesseract = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
ruff = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
  { include = "rag_toy", from = "src" }
]